--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
   </body>
   <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-  <script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
     const root = document.getElementById("root");
-    const h3 = React.createElement(
-      "h3",
-      {
-        onMouseEnter: () => console.log("mouse enter"),
-      },
-      "Hello I'm a span"
+    const Title = (
+      <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
+        Hello I'm a span
+      </h3>
     );
-    const btn = React.createElement(
-      "button",
-      {
-        onClick: () => console.log("I'm clicked"),
-      },
-      "Click me"
+    const Btn = (
+      <button
+        id="btn"
+        style={{ backgroundColor: "tomato" }}
+        onClick={() => console.log("I'm clicked")}
+      >
+        Click me
+      </button>
     );
-    const container = React.createElement("div", null, [h3, btn]);
+
+    const container = React.createElement("div", null, [Title, Btn]);
     ReactDOM.render(container, root);
   </script>
 </html>
