--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = (
+    const Title = () => (
       <h3 id="title" onMouseEnter={() => console.log("mouse enter")}>
         Hello I'm a span
       </h3>
     );
-    const Btn = (
+    const Btn = () => (
       <button
         id="btn"
         style={{ backgroundColor: "tomato" }}
@@ -23,7 +23,11 @@
       </button>
     );
 
-    const container = React.createElement("div", null, [Title, Btn]);
-    ReactDOM.render(container, root);
+    const Container = () => (
+      <div>
+        <Title /> <Btn />
+      </div>
+    );
+    ReactDOM.render(<Container />, root);
   </script>
 </html>
